# Parrot

./: .breakpoints  .deepsource.toml  .dockerignore  .example-env  .flake8  .gitignore  .gitmodules  .replit  .sourcery.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE.md  PRIVACY_POLICY.md  README.md  actions.yml  bank.json  cached.sqlite  config.json  config.yml  data.json  git-check.bat  git-check.sh  keep_alive.py  launcher.bat  launcher.sh  level.json  main.py  patch.py  pm2.json  privacy policy.md  pyproject.toml  requirements.txt  sql.py  tel.json  tests.py  tox.ini  updater.py  wchat.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  bot.yaml  codeql-analysis.yml  greetings.yml  main.yml  python-app.yml  python.yml
ARCHIVED/: _jeyy_api_endpoints.py  command_loader.py  mee6.py  music.py  music2.py  music4.py  object.py  profanity.py  reactions.py  spam_prot.py  ttt.py  warning.txt
ARCHIVED/cc/: readme.md
ARCHIVED/hub/: setup.py
ARCHIVED/jsk/: __init__.py  jsk.py
ARCHIVED/json/: hub.json  reports.json
ARCHIVED/music/: music.py
api/: README.md  __init__.py  __main__.py  pm2.json
api/cricket_api/: api.py  functions.py  random_agents.py
app/: README.md  __init__.py  quart_app.py
app/routes/: __init__.py  command_routes.py  db_routes.py  guild_routes.py  message_routes.py  misc_routes.py  user_routes.py
cogs/: aki.py  applymod.py  bj.py  config.py  economy.py  fun.py  giveaway.py  giveaway2.py  help.py  help1.py  mee6.py  memegen.py  mis.py  mod.py  music3.py  nasa.py  nsfw.py  telephone.py  ticket.py  ult.py  unbiboat.py
cogs/actions/: __init__.py  _actions.py  actions.py
cogs/afk/: __init__.py  afk.py
cogs/api/: __init__.py  api.py  github_api.py
cogs/automod/: __init__.py
cogs/autoresponder/: __init__.py  jinja_help.py  variables.py  vars.py
cogs/cc/: __init__.py  cc.py  method.py  readme.md
cogs/command_loader/: __init__.py  endpoints.py
cogs/config/: __init__.py  config.py  events.json  flags.py  method.py
cogs/defcon/: __init__.py  (+3 more)
core/: Bot.py  Cog.py  Context.py  Parrot.py  README.md  __init__.py  __template.py  bot.py  cog.py  ctx.py  help.py  tips.py  types.py  utils.py  view.py
custom_commands/: README.md  __init__.py  listeners.py
database/: cmd_count.py  economy.py  global_chat.py  leveling.py  logging.py  mee6.py  msg_count.py  premium.py  server_config.py  telephone.py  ticket.py
economy/: balance.py  beg.py  deposit.py  give.py  slots.py  steal.py  withdraw.py
emojis/: __init__.py  emojis.py
events/: _on_msg.py  arbitrary_events.py  custom_events.py  on_cmd.py  on_command_error.py  on_connect.py  on_guild_join.py  on_member_join.py  on_message.py  on_msg.py  on_msg_caching.py  on_ready.py  on_rexn.py  private_chln.py  topgg.py  user.py
extra/: adjectives.txt  anagram.json  application.yml  boogle.txt  country.json  dare.txt  docs_links.json  duke_nekum.txt  gender_options.json  hangman_words.txt  lang.json  lang.txt  latex_template.txt  madlibs_templates.json  mr_robot.txt  nhi.txt  profanity.json  programmer_quotes.json  quote.txt  random_sentences.txt  random_topics.txt  trivia_questions.json  truth.txt  twister.txt  user_agents.txt  wyr.txt
gchat/: commands.py  on_message.py  setup.py
hub/: commands.py  on_channel_delete.py  on_vc_join  on_vc_join.py  setup.py
interactions/: __init__.py
json/: config.json
launchers/: launcher.bat  launcher.sh
leveling/: leaderboard.py  on_message.py
nasa/: apod.py  epic.py  findasteroid.py  findasteroidid.py  mars.py  nasa.py  nasasearch.py
rtfm/: _doc.py  _tio.py  queries.py
telephone/: telephone.py
temp/: Environment.py  Level.py  __init__.py  parse_inv.py  temp.py  tmp.py
tests/: __init__.py  test_time.py  test_wikihow.py  test_youtube_search.py
utilities/: buttons.py  cache.py  checks.py  config.py  constants.py  converters.py  database.py  deco.py  emotes.py  exceptions.py  extra.py  formats.py  infraction.py  log.py  much.py  munch.py  object.py  paginator.py  paste.py  regex.py  robopages.py  server_backup.py  spookifications.py  time.py  ttg.py  webserver.py  wikihow.py  youtube_search.py
utils/: checks.py  emotes.py  exceptions.py
(+686 files in other folders)
