[tool.poetry]
name = "Parrot-Discord-Bot"
version = "4.7"
description = ""
authors = ["Ritik Ranjan <ritik0ranjan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
aiohttp = "^3.8.1"
pomice = "^1.1.6"
humanize = "^4.0.0"
markdownify = "^0.11.2"
psutil = "^5.9.0"
async-timeout = "^4.0.2"
jishaku = "^2.4.0"
beautifulsoup4 = "^4.11.1"
PyYAML = "^6.0"
PyNaCl = "^1.5.0"
"akinator.py" = "^5.0.0"
opuslib = "^3.0.1"
pymongo = "^4.1.1"
dnspython = "^2.2.1"
motor = "^3.0.0"
aiofile = "^3.7.4"
tabulate = "^0.8.9"
lru-dict = "^1.1.7"
python-dateutil = "^2.8.2"
click = "^8.1.3"
parsedatetime = "^2.6"
Brotli = "^1.0.9"
aiodns = "^3.0.0"
orjson = "^3.6.8"
cchardet = "^2.1.7"
rapidfuzz = "^2.0.11"
chess = "^1.9.0"
Pillow = "^9.1.0"
typing-extensions = "^4.2.0"
arrow = "^1.2.2"
quart = "^0.17.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
pyparsing = "^3.0.8"
qrcode = "^7.3.1"
python-dotenv = "^0.20.0"
pygit2 = "^1.9.1"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
