[tool.poetry]
name = "Parrot"
version = "4.8"
description = ""
authors = ["Ritik Ranjan <ritik0ranjan@gmail.com>"]
license = "MIT 2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
aiohttp = "^3.8.1"
humanize = "^4.2.2"
markdownify = "^0.11.2"
psutil = "^5.9.1"
async-timeout = "^4.0.2"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
beautifulsoup4 = "^4.11.1"
PyYAML = "^6.0"
PyNaCl = "^1.5.0"
"akinator.py" = "^5.0.0"
opuslib = "^3.0.1"
pymongo = {git = "https://github.com/mongodb/mongo-python-driver"}
dnspython = "^2.2.1"
motor = "^3.0.0"
aiofile = "^3.7.4"
tabulate = "^0.8.10"
lru-dict = "^1.1.7"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
requests = "^2.28.0"
python-dateutil = "^2.8.2"
click = "^8.1.3"
parsedatetime = "^2.6"
Brotli = "^1.0.9"
aiodns = "^3.0.0"
orjson = "^3.7.3"
cchardet = "^2.1.7"
topggpy = "^1.4.0"
rapidfuzz = "^2.0.15"
chess = "^1.9.2"
lxml = "^4.9.0"
Pillow = "^9.1.1"
typing-extensions = "^4.2.0"
arrow = "^1.2.2"
quart = "^0.17.0"
pandas = "^1.4.3"
numpy = "^1.23.0"
pyparsing = "^3.0.9"
qrcode = "^7.3.1"
python-dotenv = "^0.20.0"
pygit2 = "^1.9.2"
youtube_dl = "^2021.12.17"
tweepy = {git = "https://github.com/tweepy/tweepy"}
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
