[tool.poetry]
name = "discord-bot"
version = "4.9.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.5"
aiodns = "^3.0.0"
aiohttp = "^3.8.1"
aiofile = "^3.8.1"
arrow = "^1.2.2"
async-timeout = "^4.0.2"
beautifulsoup4 = "^4.11.1"
Brotli = "^1.0.9"
chess = "^1.9.2"
click = "^8.1.3"
dnspython = "^2.2.1"
fastapi = "^0.81.0"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
pymongo = {git = "https://github.com/mongodb/mongo-python-driver"}
wavelink = "^1.3.2"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
tweepy = {git = "https://github.com/tweepy/tweepy"}
grapheme = "^0.6.0"
humanize = "^4.3.0"
lru-dict = "^1.1.8"
lxml = "^4.9.1"
markdownify = "^0.11.2"
motor = "^3.0.0"
opuslib = "^3.0.1"
orjson = "^3.7.12"
pandas = "^1.4.3"
parsedatetime = "^2.6"
Pillow = "^9.2.0"
prettytable = "^3.4.0"
psutil = "^5.9.1"
pygit2 = "^1.10.0"
PyNaCl = "^1.5.0"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
python-dotenv = "^0.20.0"
pytz = "^2022.2.1"
PyYAML = "^6.0"
qrcode = "^7.3.1"
quart = "^0.18.0"
rapidfuzz = "^2.6.0"
requests = "^2.28.1"
tabulate = "^0.8.10"
topggpy = "^1.4.0"
tornado = "^6.2"
uvicorn = "^0.18.3"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"